styles.css
@import url('https://fonts.googleapis.com/css2?family=Monda:wght@400..700&family=Orbitron:wght@400..900&display=swap');
.orbitron {
    font-family: "Orbitron", sans-serif;
    font-weight: 900;
    font-style: normal;
    margin: 0;
    padding: 0;
}
.monda {
    font-family: "Monda", sans-serif;
    font-size: 1.9vw;
    line-height: 1.15;
    font-weight: 700;
    font-style: normal;
}

.normal{
    font-weight: 600;
}

html {
    display: flex;
    justify-content: center;
}

body{
    background-color: #006992ff;
    margin: 0vw;
    padding: 0;
    transform: scale(1.23);
    transform-origin: top;
}
@media only screen and (min-width: 660px) {
        body{
            transform: scale(1.1);
            transform-origin: top;
        }
    }
@media only screen and (min-width: 960px) {
        body{
            transform: scale(1);
            transform-origin: top;
        }
    }
@media only screen and (min-width: 1440px) {
    body{
        transform: scale(.8);
        transform-origin: top;
        height: calc(100vh / 0.8);
    }
}
@media only screen and (min-width: 1600px) {
    body{
        transform: scale(.65);
        transform-origin: top;
        height: calc(100vh / 0.8);
        
    }
}
@media only screen and (min-width: 2000px) {
    body{
        transform: scale(.5);
        transform-origin: top;
        height: calc(100vh / 0.8);
    }
}
    

img{
    object-fit: contain;
}

.container{
    display: flex; 
    flex-wrap: wrap;
    box-sizing: border-box;
    padding: 0;
    margin: 0;
    flex-direction: row;
}


/* LIST        LIST       LIST         LIST        LIST       LIST  */
ul {
    width: 60vw;
    height: 50vw;
    display: flex;
    margin: 0;
    padding: 0;
}
li {
    list-style-type: none;
    flex: 0 0 100%;
}


ul {
    overflow: hidden;
    scroll-snap-type: x mandatory;
    }
li {
    scroll-snap-align: center;
}
ul::scroll-button(*) {
    border: 0;
    background: none;
    cursor: pointer;
}

ul::scroll-button(*):hover,
ul::scroll-button(*):focus {
    background-color: #006992ff;
}


ul::scroll-button(*):disabled {
    cursor: unset;
    background-color: #a53860ff;
}

ul {
    anchor-name: --my-carousel;
}

ul::scroll-button(*) {
    position: absolute;
    position-anchor: --my-carousel;
}
ul::scroll-button(left) {
    content: "";
    background: url('Assets/left.png');
    background-size: contain;
    width: 10vw;
    height: 12.5vw;
    right: calc(anchor(left) + 0vw);
    bottom: calc(anchor(bottom) - 0vw);
    background-color: #59114dff;
}

ul::scroll-button(right) {
    content: "";
    background: url('Assets/right.png');
    background-size: contain;
    width: 10vw;
    height: 12.5vw;
    left: calc(anchor(right) + 0vw);
    bottom: calc(anchor(bottom) - 0vw);
    background-color: #074f57ff;
}


ul {
    scroll-marker-group: after;
} 
ul::scroll-marker-group {
    position: absolute;
    position-anchor: --my-carousel;
    top: calc(anchor(bottom) - 16.5vw);
    justify-self: anchor-center;
    display: flex;
    justify-content: center;
    gap: 3vw;
}
li::scroll-marker {
    content: "";
    width: 2vw;
    height: 2vw;
    background-color: transparent;
    border: .5vw solid #59114dff;
    border-radius: 50%;
}
li::scroll-marker:target-current {
    background-color: #ff715bff;
}


/* GRID            GRID            GRID            GRID */

.grid-container {
    display: grid;
    grid-template-columns: 23vw 7vw 23vw;
    grid-template-rows: 5vw 5vw 23vw 5vw;
    row-gap: 3vw;
    margin: 1.5vw 3vw;
    text-align: left;
}
.item1 {
    grid-column: 1;
    text-align: left;
}

.item2 {
    grid-column: 3;
    text-align: left;
}
.item3 {
    grid-column-start: 1;
    grid-column-end: 4;
    text-align: left;
}
.item4 {
    grid-column-start: 1;
    grid-column-end: 4;
    text-align: left;
}
.item5 {
    grid-column-start: 1;
    grid-column-end: 4;
}

.nowrap{
    white-space: nowrap;
}

/* FORM            FORM            FORM            FORM */

label{
    font-size: 2.5vw;
    font-weight: 500;
}
button[type=submit]{
    font-size: 2.5vw;
    font-weight: 900;
    word-spacing: 2vw;
}

input, textarea{
    all: unset;
    height: 3.5vw;
    margin-top: .5vw;
    font-family: "Orbitron", sans-serif;
    font-size: 2vw;
    font-weight: 400;
    color: #59114dff;
    padding-left: 1vw;
    box-sizing: border-box;
}

input[type=text]{
    background-color: #d8dbe2ff;
    padding-left: 1vw;
    width: 23vw;
    width: 100%;
}
input[type=email]{
    background-color: #d8dbe2ff;
    width: 100%;
}
textarea{
    padding-top: 1vw;
    background-color: #d8dbe2ff;
    height: 20vw;
    width: 100%;
    resize: none;
}
button{
    width: 100%;
    height: 3.5vw;
    border: none;
    cursor: pointer;
    transition-duration: 1s;
}
button:hover{
    color: #d8dbe2ff;
    background-color: #a53860ff;
    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19); /* Shadow effect */
}

    
    /* DIVs            DIVs            DIVs            DIVs  */
    
.div1 {
    width: 10vw;
    height: 12.5vw;
}
div.reset{
    width: 0vw;
    height: 0vw;
}
.div115 {
    width: 5vw;
    height: 12.5vw;
}
.div12 {
    width: 5vw;
    height: 12.5vw;
}
.div14 {
    width: 5vw;
    height: 25vw;
}
.div114 {
    width: 3.33333333334vw;
    height: 50vw;
}
.div15 {
    width: 4vw;
    height: 25vw;
}

.div21 {
    width: 20vw;
    height: 12.5vw;
}
.div22 {
    width: 20vw;
    height: 25vw;
}
.div23 {
    width: 20vw;
    height: 37.5vw;
}
.div31 {
    width: 30vw;
    height: 12.5vw;
}
.div32 {
    width: 30vw;
    height: 25vw;
}

.div433 {
    width: 6vw;
    height: 37.5vw;
}
.div33 {
    width: 30vw;
    height: 37.5vw;
}
.div41 {
    width: 40vw;
    height: 12.5vw; 
    
}
.div42 {
    width: 40vw;
    height: 25vw; 
}
.div43 {
    width: 40vw;
    height: 37.5vw;
}
.div44 {
    width: 40vw;
    height: 50vw;
}
.div51 {
    width: 50vw;
    height: 12.5vw;
}
.div52 {
    width: 50vw;
    height: 25vw;
}
/* ... */

